# proto/gen/api/v1/attachment_service.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.11
+// 	protoc-gen-go v1.36.12
 // 	protoc        (unknown)
 // source: api/v1/attachment_service.proto
 
@@ -202,8 +202,9 @@ func (x *MotionMedia) GetHasEmbeddedVideo() bool {
 	return false
 }
 
-// MediaMetadata contains normalized metadata explicitly supplied by a client.
-// The server validates and stores this data but does not extract it from the media file.
+// MediaMetadata contains normalized metadata from the original media or a client.
+// When Save media metadata is enabled, the server extracts supported photo fields
+// and uses client data only for fields it cannot read from the original file.
 type MediaMetadata struct {
 	state protoimpl.MessageState `protogen:"open.v1"`
 	// Optional. Display-oriented width in pixels.
@@ -321,8 +322,17 @@ type PhotoMetadata struct {
 	ExposureTimeSeconds   *float64 `protobuf:"fixed64,8,opt,name=exposure_time_seconds,json=exposureTimeSeconds,proto3,oneof" json:"exposure_time_seconds,omitempty"`
 	Iso                   *int32   `protobuf:"varint,9,opt,name=iso,proto3,oneof" json:"iso,omitempty"`
 	FocalLengthMm         *float64 `protobuf:"fixed64,10,opt,name=focal_length_mm,json=focalLengthMm,proto3,oneof" json:"focal_length_mm,omitempty"`
-	unknownFields         protoimpl.UnknownFields
-	sizeCache             protoimpl.SizeCache
+	ExposureBiasEv        *float64 `protobuf:"fixed64,11,opt,name=exposure_bias_ev,json=exposureBiasEv,proto3,oneof" json:"exposure_bias_ev,omitempty"`
+	ExposureProgram       string   `protobuf:"bytes,12,opt,name=exposure_program,json=exposureProgram,proto3" json:"exposure_program,omitempty"`
+	MeteringMode          string   `protobuf:"bytes,13,opt,name=metering_mode,json=meteringMode,proto3" json:"metering_mode,omitempty"`
+	WhiteBalance          string   `protobuf:"bytes,14,opt,name=white_balance,json=whiteBalance,proto3" json:"white_balance,omitempty"`
+	ColorSpace            string   `protobuf:"bytes,15,opt,name=color_space,json=colorSpace,proto3" json:"color_space,omitempty"`
+	// Human-readable description from an embedded ICC profile, when available.
+	IccProfile       string   `protobuf:"bytes,16,opt,name=icc_profile,json=iccProfile,proto3" json:"icc_profile,omitempty"`
+	BitsPerSample    *int32   `protobuf:"varint,17,opt,name=bits_per_sample,json=bitsPerSample,proto3,oneof" json:"bits_per_sample,omitempty"`
+	FocalLength_35Mm *float64 `protobuf:"fixed64,18,opt,name=focal_length_35mm,json=focalLength35mm,proto3,oneof" json:"focal_length_35mm,omitempty"`
+	unknownFields    protoimpl.UnknownFields
+	sizeCache        protoimpl.SizeCache
 }
 
 func (x *PhotoMetadata) Reset() {
@@ -421,6 +431,62 @@ func (x *PhotoMetadata) GetIso() int32 {
 func (x *PhotoMetadata) GetFocalLengthMm() float64 {
 	if x != nil && x.FocalLengthMm != nil {
 		return *x.FocalLengthMm
+	}
+	return 0
+}
+
+func (x *PhotoMetadata) GetExposureBiasEv() float64 {
+	if x != nil && x.ExposureBiasEv != nil {
+		return *x.ExposureBiasEv
+	}
+	return 0
+}
+
+func (x *PhotoMetadata) GetExposureProgram() string {
+	if x != nil {
+		return x.ExposureProgram
+	}
+	return ""
+}
+
+func (x *PhotoMetadata) GetMeteringMode() string {
+	if x != nil {
+		return x.MeteringMode
+	}
+	return ""
+}
+
+func (x *PhotoMetadata) GetWhiteBalance() string {
+	if x != nil {
+		return x.WhiteBalance
+	}
+	return ""
+}
+
+func (x *PhotoMetadata) GetColorSpace() string {
+	if x != nil {
+		return x.ColorSpace
+	}
+	return ""
+}
+
+func (x *PhotoMetadata) GetIccProfile() string {
+	if x != nil {
+		return x.IccProfile
+	}
+	return ""
+}
+
+func (x *PhotoMetadata) GetBitsPerSample() int32 {
+	if x != nil && x.BitsPerSample != nil {
+		return *x.BitsPerSample
+	}
+	return 0
+}
+
+func (x *PhotoMetadata) GetFocalLength_35Mm() float64 {
+	if x != nil && x.FocalLength_35Mm != nil {
+		return *x.FocalLength_35Mm
 	}
 	return 0
 }
@@ -608,7 +674,7 @@ type Attachment struct {
 	Memo *string `protobuf:"bytes,8,opt,name=memo,proto3,oneof" json:"memo,omitempty"`
 	// Optional. Motion media metadata.
 	MotionMedia *MotionMedia `protobuf:"bytes,9,opt,name=motion_media,json=motionMedia,proto3" json:"motion_media,omitempty"`
-	// Optional. Immutable normalized media metadata explicitly supplied by the client at creation time.
+	// Optional. Immutable normalized media metadata captured at creation time.
 	MediaMetadata *MediaMetadata `protobuf:"bytes,10,opt,name=media_metadata,json=mediaMetadata,proto3" json:"media_metadata,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
@@ -1113,7 +1179,7 @@ const file_api_v1_attachment_service_proto_rawDesc = "" +
 	"\x05video\x18\x04 \x01(\v2\x1b.memos.api.v1.VideoMetadataH\x00R\x05videoB\t\n" +
 	"\adetailsB\b\n" +
 	"\x06_widthB\t\n" +
-	"\a_height\"\xa7\x04\n" +
+	"\a_height\"\xaa\a\n" +
 	"\rPhotoMetadata\x12A\n" +
 	"\fcapture_time\x18\x01 \x01(\v2\x1e.memos.api.v1.MediaCaptureTimeR\vcaptureTime\x127\n" +
 	"\blocation\x18\x02 \x01(\v2\x1b.memos.api.v1.MediaLocationR\blocation\x12;\n" +
@@ -1127,12 +1193,25 @@ const file_api_v1_attachment_service_proto_rawDesc = "" +
 	"\x15exposure_time_seconds\x18\b \x01(\x01H\x02R\x13exposureTimeSeconds\x88\x01\x01\x12\x15\n" +
 	"\x03iso\x18\t \x01(\x05H\x03R\x03iso\x88\x01\x01\x12+\n" +
 	"\x0ffocal_length_mm\x18\n" +
-	" \x01(\x01H\x04R\rfocalLengthMm\x88\x01\x01B\x1a\n" +
+	" \x01(\x01H\x04R\rfocalLengthMm\x88\x01\x01\x12-\n" +
+	"\x10exposure_bias_ev\x18\v \x01(\x01H\x05R\x0eexposureBiasEv\x88\x01\x01\x12)\n" +
+	"\x10exposure_program\x18\f \x01(\tR\x0fexposureProgram\x12#\n" +
+	"\rmetering_mode\x18\r \x01(\tR\fmeteringMode\x12#\n" +
+	"\rwhite_balance\x18\x0e \x01(\tR\fwhiteBalance\x12\x1f\n" +
+	"\vcolor_space\x18\x0f \x01(\tR\n" +
+	"colorSpace\x12\x1f\n" +
+	"\vicc_profile\x18\x10 \x01(\tR\n" +
+	"iccProfile\x12+\n" +
+	"\x0fbits_per_sample\x18\x11 \x01(\x05H\x06R\rbitsPerSample\x88\x01\x01\x12/\n" +
+	"\x11focal_length_35mm\x18\x12 \x01(\x01H\aR\x0ffocalLength35mm\x88\x01\x01B\x1a\n" +
 	"\x18_source_exif_orientationB\v\n" +
 	"\t_f_numberB\x18\n" +
 	"\x16_exposure_time_secondsB\x06\n" +
 	"\x04_isoB\x12\n" +
-	"\x10_focal_length_mm\"m\n" +
+	"\x10_focal_length_mmB\x13\n" +
+	"\x11_exposure_bias_evB\x12\n" +
+	"\x10_bits_per_sampleB\x14\n" +
+	"\x12_focal_length_35mm\"m\n" +
 	"\x10MediaCaptureTime\x12&\n" +
 	"\x0flocal_date_time\x18\x01 \x01(\tR\rlocalDateTime\x12\"\n" +
 	"\n" +
